Smart Home Pages
1. Start Day Front Page
2. Basic Procedure Front Page
3. Close Day Front Page
4. Settings Front Page

--- a/src/app/shared/components/header.component.html
+++ b/src/app/shared/components/header.component.html
@@ -1,3 +1,19 @@
-<div class='headerApp'>
-
+<div class="headerSmall">
+	<div class="mainBox">
+        <div class="defaultBox">
+            <!--<div class="back"></div>-->
+            <div class="title">{{title}}</div>
+              <!--<div class="refresh"></div>
+            <div class="magnifier"></div>
+            <div class="up-arrow"></div>
+            <div class="logo"></div>-->
+        </div>
+    </div>
 </div>
+<!--
+<div class="headerContainer">
+	<div class="headerLogin">
+		<div class="backArrow" (click)="goToPreviousPage()"></div>
+	</div>
+</div>
+-->
