--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -1,3 +1,4 @@
 @import '../node_modules/spinkit/scss/spinners/7-three-bounce';
 @import '../node_modules/spinkit/scss/spinners/8-circle';
-@import "testing"
+@import "header";
+@import "footer";
