add retailer model

--- a/src/app/shared/components/footer-menu.component.html
+++ b/src/app/shared/components/footer-menu.component.html
@@ -1,7 +1,7 @@
 <div class="footerMenu">
 	 <div class="column" (click)="gotoStartDay()">
 		<div class="text">Start Day</div>
-        <div class="home"></div>
+        <div class="start" ></div>
     </div>
 
    	<div class="column" (click)="gotoBasicCallProcedure()">
