--- a/src/app/login/components/login.html
+++ b/src/app/login/components/login.html
@@ -1,11 +1,12 @@
-<div>
-	<div>
-		<input placeholder="USERNAME" [(ngModel)]="userId" />
-	</div>
-	<div>
-		<input placeholder="PASSWORD" type="password" [(ngModel)]="password" />
-	</div>
-	<div class="button">
-        <a (click)="login($event)">Log In</a>
-    </div>
-</div>
+        <div class="smartLogo"></div>
+		<div class="header">Enter your My Smart details to continue</div>
+		<div class="inner-box">
+			<input placeholder="Smart number or email address" [(ngModel)]="userId" />
+			<input placeholder="Password" type="password" [(ngModel)]="password" />
+			<div class="button">
+                <a>Log In</a>
+            </div>
+            <div class="errorAlert">{{getErrorMessageText()}}</div>
+			<p><a (click)="gotoForgotPassword()">Forgot your password?</a></p>
+			<p><a (click)="gotoRegister()">I don't have a My Smart Account yet</a></p>
+		</div>
