--- a/src/app/shared/components/footer-menu.component.html
+++ b/src/app/shared/components/footer-menu.component.html
@@ -1,4 +1,4 @@
-<div class="footerMenu">
+<div class="footerMenu" *ngIf="getLayout().appFooter">
 	 <div class="column" (click)="gotoStartDay()">
 		<div class="text">Start Day</div>
         <div class="start" ></div>
