--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -1,5 +1,7 @@
 @import '../node_modules/spinkit/scss/spinners/7-three-bounce';
 @import '../node_modules/spinkit/scss/spinners/8-circle';
+@import "layout";
 @import "header";
 @import "footer";
 @import "login";
+@import "mytransaction";
