--- a/src/app/start-day/components/start-day.component.html
+++ b/src/app/start-day/components/start-day.component.html
@@ -1,7 +1,24 @@
-<div>START DAY DASHBOARD</div>
-<!--<div>Hello Tamara</div>
-<div>TARGET ACHIEVEMENT</div>
-<div>INVENTORY ENDING BALANCE</div>
-<div>AMOUNT PAYABLES</div>
-<div>TODAY'S ROUTE</div><div>DSP-ALERTS</div>
-<div>SYNC NOW</div>-->
+<div class="myTransaction" [ngClass]="{medium : getResize().mediumUp}" *ngIf="!getResize().largeUp">
+    <div class="containerBody">
+        <div class="separator"></div>
+        <div class="itemContainer">
+            <div class="itemIdentifier green">Targets &amp; Actuals</div>
+        </div>
+         <div class="separator"></div>
+        <div class="itemContainer">
+            <div class="itemIdentifier green">Inventory</div>
+        </div>
+         <div class="separator"></div>
+         <div class="itemContainer">
+            <div class="itemIdentifier green">Retailer Route</div>
+        </div>
+         <div class="separator"></div>
+         <div class="itemContainer">
+            <div class="itemIdentifier green">Accounts Receivables</div>
+        </div>
+         <div class="separator"></div>
+        <div class="itemContainer">
+            <div class="itemIdentifier green">DSP Alerts</div>
+        </div>
+    </div>
+</div>
