--- a/src/scss/_login.scss
+++ b/src/scss/_login.scss
@@ -1,17 +1,124 @@
-.smartLogo{
-    margin-top: 0;
-    height: 100px;
-    width: 100%;
-    background: url("/app/img/login_screen.gif") no-repeat;
-    background-position: center center;
-    background-size: 150px;
-}
-.button {
-	width: 100%;
-	margin: 60px auto 18px;
-	cursor: pointer;
-	background-color: transparent;
-	border: 1px solid #FFF;
-	padding-right: 0;
-	padding-left: 0;
+$containerLogin-height: 100%;
+
+.containerLoginSmall {
+
+	z-index: 50;
+	position: fixed;
+    left: 0;
+    right: 0;
+    background-color: #005A5B;
+	height: 100%;
+	text-align :center;
+
+    ::-webkit-input-placeholder {
+		color:    #FFF;
+	}
+	:-moz-placeholder {
+		color:    #FFF;
+	}
+	::-moz-placeholder {
+		color:    #FFF;
+	}
+	:-ms-input-placeholder {
+		color:    #FFF;
+	}
+
+	.outer-box {
+		
+		max-width : 320px;
+		margin: 70px auto 0px;
+		
+		.header {
+			color: #FFF;
+			font-size: 28px;
+			line-height: 40px;
+			padding-right: 20px;
+			margin-bottom: 10px;
+			text-align: center;
+			font-weight: lighter;
+		}
+		
+		.inner-box {
+			
+			background-color: rgba(0, 0, 0, 0);
+			border: 0;
+			text-align: center;
+			padding: 0;
+
+			.button {
+				width: 100%;
+				margin: 60px auto 18px;
+				cursor: pointer;
+				background-color: transparent;
+				border: 1px solid #FFF;
+				padding-right: 0;
+				padding-left: 0;
+				
+                .spinner{
+                    margin-top: 0px;
+                    margin-bottom: 0px;
+                    margin-left: auto;
+                    margin-right: auto;
+                    
+                    .item{
+                        background-color: #FFF;
+                        width: 10px;
+                        height: 10px;
+                    }
+                    
+                }
+                
+			}
+            
+            .errorAlert{
+                color:#FFF;
+                font-size:14px;
+            }
+
+			input {
+				width: 100%;
+				margin: 2px auto;
+				display: block;
+				height: 35px;
+				border: none;
+				line-height: 50px - 20px;
+				font-size: medium;
+				margin-bottom: 5px;
+				background-color: #01BABF;
+				outline: 0;
+				color : #000;
+				text-align: center;
+				font-style: italic;
+                border-bottom: 1px solid #000;
+			}
+			
+			p {
+				a {
+					color: #FFF;
+					text-decoration: underline;
+					cursor: pointer;
+				}
+			}
+		}
+
+		.loginButton
+		{
+			height: 35px;
+			background-color: #01BABF;
+			text-align: center;
+			vertical-align: center;
+			font-color : #FFF;
+		}
+
+		.loginSeparator
+		{
+			border: 5px solid #005A5B;
+			margin-bottom: 50px;
+		}
+
+	}
+
+	.after-box {
+		margin-top: 20px;
+	}
 }
