updated LOGIN, MY TRANSACTION, SETTING, LOG OUT

--- a/src/scss/_footer.scss
+++ b/src/scss/_footer.scss
@@ -14,7 +14,7 @@ border-top: 1px solid #bcbac1;
     margin: auto;
     -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 
-      .start {
+      .mytransaction {
         display: block;
         height: 30px;
         width: 100%;
