--- a/src/app/shared/components/footer-menu.component.html
+++ b/src/app/shared/components/footer-menu.component.html
@@ -1,21 +1,21 @@
 <div class="footerMenu" *ngIf="getLayout().appFooter">
-	 <div class="column" (click)="gotoStartDay()">
-		<div class="text">Start Day</div>
-        <div class="start" ></div>
-    </div>
+	<div class="column" (click)="gotoMyTransaction()">
+		<div class="mytransaction"></div>
+    <div class="text">My Transaction</div>
+  </div>
 
-   	<div class="column" (click)="gotoBasicCallProcedure()">
-   		<div class="text" >Basic Procedure</div>	
-        <div class="basicp" ></div>
-    </div>
+  <div class="column" (click)="gotoBasicCallProcedure()">
+    <div class="basicp"></div>
+    <div class="text" >Basic Procedure</div>
+  </div>
 
-   <div class="column" (click)="gotoCloseDay()">
-   		<div class="text">Close Day</div>	
-        <div class="closeday" ></div>
-    </div>
+  <div class="column" (click)="gotoCloseDay()">
+ 	  <div class="closeday"></div>
+    <div class="text">Close Day</div> 
+  </div>
 
-    <div class="column" (click)="gotoSettings()">
-   		<div class="text">Settings</div>	
-        <div class="setting" ></div>
-    </div>
+  <div class="column" (click)="gotoSettings()">
+    <div class="setting"></div>
+    <div class="text">Settings</div>
+  </div>
 </div>
