--- a/src/app/app/my-transaction/components/my-transaction.component.html
+++ b/src/app/app/my-transaction/components/my-transaction.component.html
@@ -1,4 +1,4 @@
-<div class="myTransaction" [ngClass]="{medium : getResize().mediumUp}" *ngIf="!getResize().largeUp">
+<div class="myTransaction">
     <div class="containerBody">
         <div class="button">
             <div class="buttonIdentifier green">Targets &amp; Actuals</div>
