--- a/src/app/app/verification/components/verification.component.html
+++ b/src/app/app/verification/components/verification.component.html
@@ -5,7 +5,10 @@
 			<div class="loginSeparator"></div>
 			<div class="errorAlert"></div>
 			<div class="mpinBox">
-				<input/><input/><input/><input/>
+				<input type="number"/>
+				<input/>
+				<input/>
+				<input/>
 			</div>
 			<div class="loginSeparator"></div>
 			<br/>
