--- a/src/app/app/login/components/login.html
+++ b/src/app/app/login/components/login.html
@@ -4,11 +4,10 @@
 		<div class="inner-box">
 			<div class="loginSeparator"></div>
 			<div class="errorAlert">{{getErrorMessageText()}}</div>
-			<div><input placeholder="Username"  /></div>
-			<div><input placeholder="Password" type="password"	/></div>
+			<div><input placeholder="Username" [(ngModel)]="username"/></div>
+			<div><input placeholder="Password" type="password" [(ngModel)]="password"/></div>
 			<a (click)="login($event)"><div class="loginButton">SIGN IN</div></a>
 			<p><a (click)="gotoForgotPassword()">Forgot your password?</a></p>
 		</div>
 	</div>
-	<div class="smartLogo"></div>
 </div>
