Added ForgetPassword Layout and Updated Footer

--- a/src/app/app/login/components/login.html
+++ b/src/app/app/login/components/login.html
@@ -7,7 +7,7 @@
 			<div><input placeholder="Username"  /></div>
 			<div><input placeholder="Password" type="password"	/></div>
 			<a (click)="login($event)"><div class="loginButton">SIGN IN</div></a>
-			<p><a (click)="gotoForgotPassword()">Forgot your password?</a></p>
+			<p><a (click)="gotoForgetPassword()">Forgot your password?</a></p>
 		</div>
 	</div>
 	<div class="smartLogo"></div>
