--- a/src/app/scss/_login.scss
+++ b/src/app/scss/_login.scss
@@ -56,6 +56,9 @@ $containerLogin-height: 100%;
                     }
                 }
 			}
+			.message{
+				color: #FFF;
+			}
             .errorAlert{
                 color:#FFF;
                 font-size:14px;
