--- a/src/app/app/login/components/forgot-password.component.html
+++ b/src/app/app/login/components/forgot-password.component.html
@@ -5,11 +5,14 @@
 			<div class="loginSeparator"></div>
 			<div class="message">DISTRIBUTOR CODE</div>
 			<div><input/></div>
-			<div class="message">TAX IDENTIFICATION NUMBER</div>
+			<div class="message">TAX IDENTIFICATION NUMBERs</div>
 			<div><input/></div>
 			<div class="loginSeparator"></div>
 			<br/>
-			<a (click)="gotoLogin()"><div class="loginButton">SEND PASSWORD</div></a>
+<!-- 			<a (click)="gotoLogin()"> -->		
+			<a (click)="toggleVerificationCodeModal()">
+				<div class="loginButton">SEND PASSWORD</div>
+			</a>
 		</div>
 	</div>
 	<div class="smartLogo"></div>
