--- a/src/app/app/my-transaction/components/my-transaction.component.html
+++ b/src/app/app/my-transaction/components/my-transaction.component.html
@@ -1,7 +1,7 @@
 <div class="myTransaction" [ngClass]="{medium : getResize().mediumUp}" *ngIf="!getResize().largeUp">
     <div class="containerBody">
         <div class="button">
-            <div class="buttonIdentifier green">Targets &amp; Actuals</div>
+            <div class="buttonIdentifier green" (click)="test($event)">Targets &amp; Actuals</div>
         </div>
          <div class="separator"></div>
          <div class="button">
