--- a/src/app/app/login/components/forgot-password.component.html
+++ b/src/app/app/login/components/forgot-password.component.html
@@ -5,14 +5,11 @@
 			<div class="loginSeparator"></div>
 			<div class="message">DISTRIBUTOR CODE</div>
 			<div><input/></div>
-			<div class="message">TAX IDENTIFICATION NUMBERs</div>
+			<div class="message">TAX IDENTIFICATION NUMBERR</div>
 			<div><input/></div>
 			<div class="loginSeparator"></div>
 			<br/>
-<!-- 			<a (click)="gotoLogin()"> -->		
-			<a (click)="toggleVerificationCodeModal()">
-				<div class="loginButton">SEND PASSWORD</div>
-			</a>
+			<div class="loginButton" (click)="toggleVerificationCodeModal()">SEND PASSWORD</div>
 		</div>
 	</div>
 	<div class="smartLogo"></div>
