--- a/src/app/scss/app.scss
+++ b/src/app/scss/app.scss
@@ -7,3 +7,9 @@
 @import "mytransaction";
 @import "setting";
 @import "verification";
+@import "targets-actuals";
+@import "inventory";
+@import "retailer-route";
+@import "accounts-receivables";
+@import "dsp-alerts";
+@import "reset-password";
