Add New Screen to Collection

--- a/src/app/scss/app.scss
+++ b/src/app/scss/app.scss
@@ -4,6 +4,7 @@
 @import "header";
 @import "footer";
 @import "login";
+@import "main-menu";
 @import "mytransaction";
 @import "setting";
 @import "verification";
