updated style and created global scss

--- a/src/app/app/my-transaction/components/targets-actuals.component.html
+++ b/src/app/app/my-transaction/components/targets-actuals.component.html
@@ -1,3 +1,5 @@
 <div class="targetsActuals">
-    SUDAH MASUK KE TARGETS &amp; ACTUALS YA
+	<div class="submenu active"><div class="text">Day</div></div>
+	<div class="submenu"><div class="text">Week</div></div>
+	<div class="submenu"><div class="text">Month</div></div>
 </div>
