--- a/src/app/scss/_header.scss
+++ b/src/app/scss/_header.scss
@@ -18,8 +18,9 @@
           background-position: center center;
           cursor: pointer;
           text-align: center;
-          color: #FFF;
-          font-size: 30px;
+          color: $white;
+          font-size: 20px;
+          padding-top: 10px;
         }
         .back{
             position: fixed;
