Cleaned up scss

--- a/src/app/app/my-transaction/components/targets-actuals.component.html
+++ b/src/app/app/my-transaction/components/targets-actuals.component.html
@@ -1,5 +1,5 @@
 <div class="targetsActuals">
-	<div class="submenu active"><div class="text">Day</div></div>
-	<div class="submenu"><div class="text">Week</div></div>
-	<div class="submenu"><div class="text">Month</div></div>
+	<div class="submenuDay active"><div class="text">Day</div></div>
+	<div class="submenuWeek"><div class="text">Week</div></div>
+	<div class="submenuMonth"><div class="text">Month</div></div>
 </div>
