--- a/src/app/scss/_login.scss
+++ b/src/app/scss/_login.scss
@@ -62,6 +62,7 @@ $containerLogin-height: 100%;
 			}
             .errorAlert{
             	display: block;
+            	position: fixed;
                 color:#FFF;
                 font-size:14px;
             }
@@ -78,7 +79,6 @@ $containerLogin-height: 100%;
 				outline: 0;
 				color : #000;
 				text-align: center;
-				font-style: italic;
                 border-bottom: 1px solid #000;
 			}
 			p {
@@ -92,12 +92,12 @@ $containerLogin-height: 100%;
 		.loginButton
 		{
 			height: 35px;
-			background-color: #00C2BA;
+			background-color: $bluebutton;
 			text-align: center;
 			vertical-align: center;
 			font-size: 15pt;
     		padding-top: 7px;
-    		color : #FFF;
+    		color : $white;
 		}
 		.loginSeparator
 		{
