--- a/src/app/scss/_targets-actuals.scss
+++ b/src/app/scss/_targets-actuals.scss
@@ -2,14 +2,17 @@
     //padding-bottom: 45px;
     z-index: 1;
     height: 100%;
-    .submenu
+    width: 100%;
+    .submenuDay
     {
-	    width: 33.33333%;
+    	display: block;
+	    width: 34%;
 	    background-color: $smartmenucolor;
 	    padding-top: 10px;
 	    padding-bottom: 10px;
-	    margin-top: -2px;
-	    float: left
+	    margin-top: -3px;
+	    margin-right: -1%;
+	    float: left;
 	    &.active{
 		    border-bottom: 3px solid $red;
 	    	margin-left: 0;
@@ -21,7 +24,51 @@
 	    	font-size: 15px;
 
 	    }
+	}
+	.submenuWeek
+    {
+    	display: block;
+	    width: 35%;
+	    background-color: $smartmenucolor;
+	    padding-top: 10px;
+	    padding-bottom: 10px;
+	    margin-top: -3px;
+	    margin-right: -1%;
+	    margin-left: -1%;
+	    float: left;
+	    &.active{
+		    border-bottom: 3px solid $red;
+	    	margin-left: 0;
+	    }
+	    .text
+	    {
+	    	color: #fff;
+	    	text-align: center;
+	    	font-size: 15px;
+
+	   }
+	}
+	.submenuMonth
+    {
+    	display: block;
+	    width: 34%;
+	    background-color: $smartmenucolor;
+	    padding-top: 10px;
+	    padding-bottom: 10px;
+	    margin-top: -3px;
+	    margin-right: -1%;
+	    float: left;
+	    &.active{
+		    border-bottom: 3px solid $red;
+	    	margin-left: 0;
+	    }
+	    .text
+	    {
+	    	color: #fff;
+	    	text-align: center;
+	    	font-size: 15px;
+
+	    }    
 
     }
-
 }
