added detail retailer page (/main/detailRetailer), updated basiccall css

--- a/src/app/app/basic-call-procedure/components/basic-call-pro.component.html
+++ b/src/app/app/basic-call-procedure/components/basic-call-pro.component.html
@@ -1,1 +1,8 @@
-<div>Basic Call Procedure</div>
+<div class="basicCallProContainer">
+	<div class="containerBody">
+		 <div class="text">
+            <div class="headerText">Basic Call</div>
+            <div class="headerSubText"></div>
+         </div>
+	</div>
+</div>
