--- a/src/app/app/login/components/forgot-password.component.html
+++ b/src/app/app/login/components/forgot-password.component.html
@@ -1,4 +1,4 @@
-<div class="containerLoginSmall">
+<div class="containerLogin">
 	<div class="outer-box">
 		<div class="header">DSP Mobile App</div>
 		<div class="inner-box">
