--- a/src/app/scss/_mytransaction.scss
+++ b/src/app/scss/_mytransaction.scss
@@ -2,8 +2,10 @@
     //padding-bottom: 45px;
     z-index: 1;
     height: 100%;
+    background-color: #E6E7E9;
     .containerBody {
         //width: 100%;
+        height: 100%;
         background-color: #E6E7E9;
         .separator {
             border-bottom: 1px solid #E6E7E9;
