--- a/src/app/app/close-day/components/close-day.component.html
+++ b/src/app/app/close-day/components/close-day.component.html
@@ -1,23 +1,1 @@
-<div class="mainMenu" [ngClass]="{medium : getResize().mediumUp}" *ngIf="!getResize().largeUp">
-    <div class="containerBody">
-        <div class="button">
-            <div class="buttonIdentifier green" (click)="toggleTargetActual()">Targets &amp; Actuals</div>
-        </div>
-         <div class="separator"></div>
-         <div class="button">
-            <div class="buttonIdentifier green" (click)="toggleVisitedRetail()">Visited Retailer Today</div>
-        </div>
-         <div class="separator"></div>
-          <div class="button">
-            <div class="buttonIdentifier green" (click)="toggleCollection()">Collection &amp; Remittance</div>
-        </div>
-         <div class="separator"></div>
-          <div class="button">
-            <div class="buttonIdentifier green" (click)="toggleStockReturn()">Stock Return</div>
-        </div>
-         <div class="separator"></div>
-         <div class="button">
-            <div class="buttonIdentifier green" (click)="toggleSync()">Sync</div>
-        </div>
-    </div>
-</div>
+<div>Close Day</div>
