--- a/src/app/scss/app.scss
+++ b/src/app/scss/app.scss
@@ -1,5 +1,6 @@
 @import '../node_modules/spinkit/scss/spinners/7-three-bounce';
 @import '../node_modules/spinkit/scss/spinners/8-circle';
+@import 'idsp';
 @import "layout";
 @import "header";
 @import "footer";
