--- a/src/app/scss/app.scss
+++ b/src/app/scss/app.scss
@@ -5,6 +5,7 @@
 @import "header";
 @import "footer";
 @import "login";
+@import "main-menu";
 @import "mytransaction";
 @import "setting";
 @import "verification";
