--- a/src/app/scss/_footer.scss
+++ b/src/app/scss/_footer.scss
@@ -26,7 +26,7 @@ border-top: 1px solid #bcbac1;
         background-position-y: center;
         background-size: 25px;
           &.active {
-            background: url("../img/icon-idsp/startday-green.png") no-repeat;
+            background: url("../img/icon-idsp/my-transaction-turquoise.png") no-repeat;
             background-position-x: center;
             background-position-y: center;
             background-size: 25px;
@@ -45,7 +45,7 @@ border-top: 1px solid #bcbac1;
         background-position-y: center;
         background-size: 33px;
           &.active {
-            background: url("../img/icon-idsp/bcp-green.png") no-repeat;
+            background: url("../img/icon-idsp/bcp-turqoise.png") no-repeat;
             background-position-x: center;
             background-position-y: center;
             background-size: 33px;
@@ -64,7 +64,7 @@ border-top: 1px solid #bcbac1;
         background-position-y: center;
         background-size: 22px;
           &.active {
-            background: url("../img/icon-idsp/closeday-green.png") no-repeat;
+            background: url("../img/icon-idsp/closeday-turqoise.png") no-repeat;
             background-position-x: center;
             background-position-y: center;
             background-size: 22px;
@@ -83,7 +83,7 @@ border-top: 1px solid #bcbac1;
         background-position-y: center;
         background-size: 28px;
           &.active {
-            background: url("../img/icon-idsp/setting-green.png") no-repeat;
+            background: url("../img/icon-idsp/setting-turqoise.png") no-repeat;
             background-position-x: center;
             background-position-y: center;
             background-size: 28px;
@@ -97,7 +97,7 @@ border-top: 1px solid #bcbac1;
       margin-bottom: 1px;
       padding-top: 2px;
       &.active {
-        color: #00FF00;
+        color: #007879;
      }
   }
 }
