--- a/src/app/app/basic-call-procedure/components/basic-call-pro.component.html
+++ b/src/app/app/basic-call-procedure/components/basic-call-pro.component.html
@@ -1,8 +1,12 @@
 <div class="basicCallProContainer">
 	<div class="containerBody">
-		 <div class="text">
-            <div class="headerText">Basic Call</div>
-            <div class="headerSubText"></div>
+		 <div class="header">
+		 	<div class="void"></div>
          </div>
+        <div class="itemContainer" >
+        	<div class="itemIdentifier">Gloria Cell</div>
+        	<div class="itemValue">Retailer mobile number</div>
+        	 <a (click)="gotoDetailRetailer()"><div class="itemIcon openSubItem"></div></a>      	
+        </div>
 	</div>
 </div>
