basic call procedure, detail retailer, retailer sales order

--- a/src/app/app/basic-call-procedure/components/basic-call-pro.component.html
+++ b/src/app/app/basic-call-procedure/components/basic-call-pro.component.html
@@ -1,1 +1,12 @@
-<div>Basic Call Procedure</div>
+<div class="basicCallProContainer">
+	<div class="containerBody">
+		 <div class="header">
+		 	<div class="void"></div>
+         </div>
+        <div class="itemContainer" >
+        	<div class="itemIdentifier">Gloria Cell</div>
+        	<div class="itemValue">Retailer mobile number</div>
+        	 <a (click)="gotoDetailRetailer()"><div class="itemIcon openSubItem"></div></a>      	
+        </div>
+	</div>
+</div>
