--- a/src/app/scss/_layout.scss
+++ b/src/app/scss/_layout.scss
@@ -3,7 +3,7 @@ body{
 	// font-family: Futura, Arial, sans-serif;
 	font-family: 'Calibri', sans-serif;
 	// font-family: Helvetica, sans-serif;
-	background-color: #EEE;
+	background-color: #FFF;
 	margin: 0;
 	padding: 0;
 	font-size: 10.5pt;
