--- a/src/app/scss/app.scss
+++ b/src/app/scss/app.scss
@@ -17,3 +17,6 @@
 @import "reset-password";
 @import "modal-box";
 @import "modal-verificationcode";
+@import "retailer-sales-order";
+@import "basic-call-procedure";
+@import "detail-retailer";
