Fix Convention name for CSS

--- a/src/app/app/close-day/components/close-day.component.html
+++ b/src/app/app/close-day/components/close-day.component.html
@@ -1,23 +1,23 @@
- <div class="mainMenu">
-     <div class="containerBody">
+ <div class="main-menu">
+     <div class="container-body">
          <div class="button">
-             <div class="buttonIdentifier green" (click)="toggleTargetActual()">Targets &amp; Actuals</div>
+             <div class="button-identifier green" (click)="toggleTargetActual()">Targets &amp; Actuals</div>
          </div>
           <div class="separator"></div>
           <div class="button">
-             <div class="buttonIdentifier green" (click)="toggleVisitedRetail()">Visited Retailer Today</div>
+             <div class="button-identifier green" (click)="toggleVisitedRetail()">Visited Retailer Today</div>
          </div>
           <div class="separator"></div>
            <div class="button">
-             <div class="buttonIdentifier green" (click)="toggleCollection()">Collection &amp; Remittance</div>
+             <div class="button-identifier green" (click)="toggleCollection()">Collection &amp; Remittance</div>
          </div>
           <div class="separator"></div>
            <div class="button">
-             <div class="buttonIdentifier green" (click)="toggleStockReturn()">Stock Return</div>
+             <div class="button-identifier green" (click)="toggleStockReturn()">Stock Return</div>
          </div>
           <div class="separator"></div>
           <div class="button">
-             <div class="buttonIdentifier green" (click)="toggleSync()">Sync</div>
+             <div class="button-identifier green" (click)="toggleSync()">Sync</div>
          </div>
      </div>
  </div>
