--- a/src/app/app/my-transaction/components/my-transaction.component.html
+++ b/src/app/app/my-transaction/components/my-transaction.component.html
@@ -1,23 +1,23 @@
-<div class="myTransaction">
-    <div class="containerBody">
+<div class="my-transaction">
+    <div class="container-body">
         <div class="button">
-            <div class="buttonIdentifier green" (click)="goToTargetsActuals()">Targets &amp; Actuals</div>
+            <div class="button-identifier green" (click)="goToTargetsActuals()">Targets &amp; Actuals</div>
         </div>
          <div class="separator"></div>
          <div class="button">
-            <div class="buttonIdentifier green" (click)="goToInventory()">Inventory</div>
+            <div class="button-identifier green" (click)="goToInventory()">Inventory</div>
         </div>
          <div class="separator"></div>
           <div class="button">
-            <div class="buttonIdentifier green" (click)="goToRetailerRoute()">Retailer Route</div>
+            <div class="button-identifier green" (click)="goToRetailerRoute()">Retailer Route</div>
         </div>
          <div class="separator"></div>
           <div class="button">
-            <div class="buttonIdentifier green" (click)="goToAccountsReceivables()">Accounts Receivables</div>
+            <div class="button-identifier green" (click)="goToAccountsReceivables()">Accounts Receivables</div>
         </div>
          <div class="separator"></div>
          <div class="button">
-            <div class="buttonIdentifier green" (click)="goToDSPAlerts()">DSP Alerts</div>
+            <div class="button-identifier green" (click)="goToDSPAlerts()">DSP Alerts</div>
         </div>
     </div>
 </div>
