--- a/src/app/app/shared/components/modal-includes/verificationcode-modal.component.html
+++ b/src/app/app/shared/components/modal-includes/verificationcode-modal.component.html
@@ -1,14 +1,14 @@
-<div class="modalVerificationCode">
-    <div class="modalBody">
-        <div class="itemHeader">
+<div class="modal-verification-code">
+    <div class="modal-body">
+        <div class="item-header">
             SUCCESS!
         </div>
-        <div class="itemTitle">
+        <div class="item-title">
             Password has been sent to your
             <br/>mobile and email address.
         </div>
     </div>
-    <div class="modalFooter">
+    <div class="modal-footer">
         <div class="button red" (click)="close()">
             Close
         </div>
