--- a/src/app/app/shared/components/modal.component.html
+++ b/src/app/app/shared/components/modal.component.html
@@ -1,5 +1,5 @@
-<div class="ModalOuterBox" *ngIf='getMainModalStatus()'>
-        <div class="ModalInternal">
+<div class="modal-outer-box" *ngIf='getMainModalStatus()'>
+        <div class="modal-internal">
                 <info-modal *ngIf='getModalStatus().info'></info-modal>
                 <verificationcode-modal *ngIf='getModalStatus().verificationcode'></verificationcode-modal>
         </div>
