update naming format retailer sales order, settings, targets actuals, verification (scss & html)

--- a/src/app/app/verification/components/verification.component.html
+++ b/src/app/app/verification/components/verification.component.html
@@ -2,21 +2,21 @@
 	<div class="outer-box">
 		<div class="header">DSP Mobile App</div>
 		<div class="inner-box">
-			<div class="loginSeparator"></div>
-			<div class="errorAlert"></div>
-			<div class="mpinBox">
+			<div class="login-separator"></div>
+			<div class="error-alert"></div>
+			<div class="mpin-box">
 				<input type="number"/>
 				<input/>
 				<input/>
 				<input/>
 			</div>
-			<div class="loginSeparator"></div>
+			<div class="login-separator"></div>
 			<br/>
 			<div class="message">
 			An MPIN code has been sent<br/>
 			to your registered number.</div>
-			<a (click)="login($event)"><div class="loginButton">SUBMIT</div></a>
+			<a (click)="login($event)"><div class="login-button">SUBMIT</div></a>
 		</div>
 	</div>
-	<div class="smartLogo"></div>
+	<div class="smart-logo"></div>
 </div>
