--- a/src/app/scss/_setting.scss
+++ b/src/app/scss/_setting.scss
@@ -2,7 +2,7 @@
     //padding-bottom: 45px;
     z-index: 1;
     height: 100%;
-    .containerBody {
+    .container-body {
         //width: 100%;
         background-color: #E6E7E9;
         .separator {
@@ -15,14 +15,14 @@
             padding-bottom: 12px;
             padding-top: 12px;
             background-color: #00989B;
-            .buttonIdentifier {
+            .button-identifier {
                 font-size: 17px;
                 text-align: center;
                 &.green {
                     color: #fff;
                 }
                 
-                &.subItem{
+                &.sub-item{
                     padding-left: 40px;
                     width: calc(100% - 140px);
                 }
@@ -31,7 +31,7 @@
                     color: #008080;
                 }
             }
-            .buttonValue {
+            .button-value {
                 font-size: 15px;
                 float: right;
                 font-size: 15px;
@@ -45,7 +45,7 @@
                 }
             }
         }
-        .itemFooterContainer {
+        .item-footer-container {
             display: inline-block;
             width: 100%;
             padding-top: 20px;
