--- a/src/app/scss/_targets-actuals.scss
+++ b/src/app/scss/_targets-actuals.scss
@@ -1,9 +1,9 @@
-.targetsActuals {
+.targets-actuals {
     //padding-bottom: 45px;
     z-index: 1;
     height: 100%;
     width: 100%;
-    .submenuDay
+    .sub-menu-day
     {
     	display: block;
 	    width: 34%;
@@ -25,7 +25,7 @@
 
 	    }
 	}
-	.submenuWeek
+	.sub-menu-week
     {
     	display: block;
 	    width: 35%;
@@ -48,7 +48,7 @@
 
 	   }
 	}
-	.submenuMonth
+	.sub-menu-month
     {
     	display: block;
 	    width: 34%;
