--- a/src/app/app/basic-call-procedure/components/retailer-sales-order.component.html
+++ b/src/app/app/basic-call-procedure/components/retailer-sales-order.component.html
@@ -1,13 +1,13 @@
-<div class = "retailerSalesOrder">
-	<div class = "containerBody">
+<div class = "retailer-sales-order">
+	<div class = "container-body">
 			<div class="divider">
 				<div class= "button" >
-					<div class="buttonIdentifier">SKIP</div>
+					<div class="button-identifier">SKIP</div>
 				</div>		
 			</div>
 				<div class="divider">
 					<div class= "button" >
-						<div class="buttonIdentifier">NEXT</div>
+						<div class="button-identifier">NEXT</div>
 					</div>
 				</div>
 	</div>
