--- a/src/app/app/my-transaction/components/targets-actuals.component.html
+++ b/src/app/app/my-transaction/components/targets-actuals.component.html
@@ -1,5 +1,5 @@
-<div class="targetsActuals">
-	<div class="submenuDay active"><div class="text">Day</div></div>
-	<div class="submenuWeek"><div class="text">Week</div></div>
-	<div class="submenuMonth"><div class="text">Month</div></div>
+<div class="targets-actuals">
+	<div class="sub-menu-day active"><div class="text">Day</div></div>
+	<div class="sub-menu-week"><div class="text">Week</div></div>
+	<div class="sub-menu-month"><div class="text">Month</div></div>
 </div>
