Fix Convention Name

--- a/src/app/app/shared/components/header.component.html
+++ b/src/app/app/shared/components/header.component.html
@@ -1,6 +1,6 @@
-<div class="headerSmall"  *ngIf="getLayout().appHeader">
-	<div class="mainBox">
-        <div class="defaultBox">
+<div class="header-small"  *ngIf="getLayout().appHeader">
+	<div class="main-box">
+        <div class="default-box">
             <div class="back" *ngIf="getHeaderLayout().back" (click)="goToPreviousPage()"></div>
             <div class="title">{{getTitle()}}</div>
               <!--<div class="refresh"></div>
