--- a/src/app/scss/_idsp.scss
+++ b/src/app/scss/_idsp.scss
@@ -1,5 +1,5 @@
-$smartbggreen : #005A5B;
-$smartmenucolor : #007879;
+$smart-bg-green : #005A5B;
+$smart-menu-color : #007879;
 $red : #FF0000;
 $white : #FFF;
-$bluebutton : #00C2BA;
+$blue-button : #00C2BA;
