--- a/src/app/app/login/components/forgot-password.component.html
+++ b/src/app/app/login/components/forgot-password.component.html
@@ -1,19 +1,19 @@
-<div class="containerLogin">
+<div class="container-login">
 	<div class="outer-box">
 		<div class="header">DSP Mobile App</div>
 		<div class="inner-box">
-			<div class="loginSeparator"></div>
+			<div class="login-separator"></div>
 			<div class="message">DISTRIBUTOR CODE</div>
 			<div><input/></div>
 			<div class="message">TAX IDENTIFICATION NUMBER</div>
 			<div><input/></div>
-			<div class="loginSeparator"></div>
+			<div class="login-separator"></div>
 			<br/>
 <!-- 			<a (click)="gotoLogin()"> -->		
 			<a (click)="toggleVerificationCodeModal()">
-				<div class="loginButton">SEND PASSWORD</div>
+				<div class="login-button">SEND PASSWORD</div>
 			</a>
 		</div>
 	</div>
-	<div class="smartLogo"></div>
+	<div class="smart-logo"></div>
 </div>
