--- a/src/app/app/login/components/login.component.html
+++ b/src/app/app/login/components/login.component.html
@@ -1,12 +1,12 @@
-<div class="containerLogin">
+<div class="container-login">
 	<div class="outer-box">
 		<div class="header">DSP Mobile App</div>
 		<div class="inner-box">
-			<div class="loginSeparator"></div>
-			<div class="errorAlert">{{getErrorMessageText()}}</div>
+			<div class="login-separator"></div>
+			<div class="error-alert">{{getErrorMessageText()}}</div>
 			<div><input placeholder="Username" [(ngModel)]="username"/></div>
 			<div><input placeholder="Password" type="password" [(ngModel)]="password"/></div>
-			<a (click)="login($event)"><div class="loginButton">SIGN IN</div></a>
+			<a (click)="login($event)"><div class="login-button">SIGN IN</div></a>
 			<p><a (click)="gotoForgetPassword()">Forgot your password?</a></p>
 		</div>
 	</div>
