--- a/src/app/scss/_header.scss
+++ b/src/app/scss/_header.scss
@@ -1,16 +1,16 @@
-.headerSmall{
+.header-small{
   width: 100%;
     height: 50px;
-    .openSearch{
+    .open-search{
         height: 96px;
       }
-    .mainBox{
+    .main-box{
       background-color: #007879;
       top: 0;
       z-index: 100;
       width: 100%;
       position: fixed;
-      .defaultBox{
+      .default-box{
         height: 48px;
         .title{
           height:48px;
@@ -35,13 +35,13 @@
       }
     }
 
-.headerContainer{
+.header-container{
   width: 100%;
   height: 48px;
   z-index: 500;
   position: fixed;
   top: 10px;
-      .backArrow {
+      .back-arrow {
         height: 46px;
         width: 46px;
         margin-bottom: 60px;
