--- a/src/app/scss/_targets-actuals.scss
+++ b/src/app/scss/_targets-actuals.scss
@@ -7,7 +7,7 @@
     {
     	display: block;
 	    width: 34%;
-	    background-color: $smartmenucolor;
+	    background-color: $smart-menu-color;
 	    padding-top: 10px;
 	    padding-bottom: 10px;
 	    margin-top: -3px;
@@ -29,7 +29,7 @@
     {
     	display: block;
 	    width: 35%;
-	    background-color: $smartmenucolor;
+	    background-color: $smart-menu-color;
 	    padding-top: 10px;
 	    padding-bottom: 10px;
 	    margin-top: -3px;
@@ -52,7 +52,7 @@
     {
     	display: block;
 	    width: 34%;
-	    background-color: $smartmenucolor;
+	    background-color: $smart-menu-color;
 	    padding-top: 10px;
 	    padding-bottom: 10px;
 	    margin-top: -3px;
